@@ -26,6 +26,12 @@
 
 2007-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
+        * Version 0.03 released.
+
+        * Commented out threads.pm in usr_code.pm
+
+2007-09-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
         * Version 0.01 released.
 
         * Fixed unintialized variable error.
